[package]
name = "duck_db_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
scraper = "0.12.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_yaml = "0.8"

serde_json = "0.8"
